iac/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app.kubernetes.io/name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - image: reg.alantouring.ir/frontend/dashboard:2.2
        name: main
        ports:
          - containerPort: 80
            protocol: TCP
            name: http
